--- a/myOwnWebsite.css
+++ b/myOwnWebsite.css
@@ -64,12 +64,14 @@ body{
 .hc-2{
     height:50%;
     width:100%;
+    background-color: black;
 }
 
 nav{
     display:flex;
     padding: 10px 15px;
-    height:65px;
+    height:100%;
+    width:100%;
 
     
     
@@ -78,7 +80,7 @@ nav{
     display: flex;
     flex-direction:row;
     justify-content: center;
-    height:65px;
+    height:100%;
     width:100%
     
 }
@@ -88,4 +90,27 @@ nav{
     margin:20px;
     justify-content: center;
 }
+.navbar> li> a{
+    color:white;
+    display:flex;
+    align-items: center;
+}
+div{
+    display:block;
+}
+.download{
+    width:200px;
+    height: 40px;
+    background-color:rgb(255, 166, 0);
+    border-radius:10px;
+    margin-top:7px;
+}
+main{
+    display:flex;
+    flex-direction: column;
+    border: 1px solid red;
+    height:85vh;
+    width:100%;
+}
+
 
